aj fixes a few things

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,8 +7,10 @@
   value="<%= form_authenticity_token %>">
 
   <p>
-  <label for='user[email]'> User-email: </label>
-    <input id='user[email]' type='text' name='user[email]'>
+  <label> User-email:
+<input type='text' name='user[email]'>
+   </label>
+    <!-- bananas = ajgosling2@gmail.com -->
   </p>
 
   <p>
